--- a/Django-Initiation/sitedjango/applidjango/templates/applidjango/connexion.html
+++ b/Django-Initiation/sitedjango/applidjango/templates/applidjango/connexion.html
@@ -1,8 +1,8 @@
 {% extends "applidjango/base.html" %}
 
-{% block title %} Connexion {% endblock %}
+{% block title %}Connexion{% endblock %}
 
-{% block bodyId %} loginPage {% endblock %}
+{% block bodyId %}loginPage{% endblock %}
 
 {% block content %}
 
@@ -16,7 +16,7 @@
 
 		<p>
  			<input type="submit" value="Se connecter"/>
- 			<a href=""> Créer un compte </a>
+ 			<a href="/inscription/"> Créer un compte </a>
  		</p>
 	</form>
 
