--- a/Django-Initiation/sitedjango/applidjango/templates/applidjango/connexion.html
+++ b/Django-Initiation/sitedjango/applidjango/templates/applidjango/connexion.html
@@ -16,7 +16,7 @@
 
 		<p>
  			<input type="submit" value="Se connecter"/>
- 			<a href="/inscription/"> Créer un compte </a>
+ 			<a href="{% url 'inscription' %}"> Créer un compte </a>
  		</p>
 	</form>
 
