--- a/Django-Initiation/sitedjango/sitedjango/static/css/style.css
+++ b/Django-Initiation/sitedjango/sitedjango/static/css/style.css
@@ -129,13 +129,43 @@ header
     color: #FFFFFF;
 }
 
-header p[id='nom']
+p[id='nom']
 {
     /* augmenter la taille du texte de 22px */
-    font-size: 22px;
+
     /**/
     margin: 20px 0 0 70px;
+    position: absolute;
+    top: 60px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #d9dfea #0e1f5b #0e1f5b #d9dfea;
+    background-color: #3b5998;
+    color: #FFFFFF;
+    padding: 2px 15px 3px 15px;
+    text-align: center;
+    text-decoration: none;
 }
+
+
+
+p[class='connexion'] a , p[class='deconnexion'] a
+{
+    text-align: center;
+    text-decoration: none;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #d9dfea #0e1f5b #0e1f5b #d9dfea;
+    background-color: #3b5998;
+    color: #FFFFFF;
+    position: absolute;
+    padding: 2px 15px 3px 15px;
+    top: 600px;
+    width: 100px;
+    left : 50%;
+}
+
+
 
 header p[id='function']
 {
@@ -259,4 +289,24 @@ section[id='friendList'] ul
 section[id='friendList'] ul li
 {
     margin: 0 0 5px 0;
+}
+
+dl[class='fieldList'] dt
+{
+    display: block;
+    width: 250px;
+    float: left;
+    text-align: right;
+    padding: 0 10px 0 0;
+    font-weight: bold;
+
+}
+
+dl[class='fieldList'] dd
+{
+    display: block;
+    width: 450px;
+    padding: 0px;
+    margin: 0 0 10px 0;
+
 }
